--- a/app/views/doctors/index.html.erb
+++ b/app/views/doctors/index.html.erb
@@ -3,6 +3,7 @@
 <h2>Choose your Doctor</h2>
 <% @doctors.each do |doctor| %>
   <h3>Name: <%= doctor.last_name %></h3>
-
+  <%= link_to "View Doctor", doctor_path(doctor) %>
 <% end %>
+<h2><%= link_to "Add a Doctor", new_doctor_path %></h2>
 
