--- a/app/views/doctors/show.html.erb
+++ b/app/views/doctors/show.html.erb
@@ -1,2 +1,5 @@
-<h1>Doctors#show</h1>
-<p>Find me in app/views/doctors/show.html.erb</p>
+<h1><%= @doctor.last_name %></h1>
+<hr />
+<h3><%= link_to "Edit Doctor", edit_doctor_path %></h3>
+<h3><%= link_to "Back", doctors_path %></h3>
+<h3><%= link_to "Delete doctor", doctor_path(@doctor), method: :delete %></h3>
